# tdd-guard

./: .claudeignore  .commitlintrc.json  .env.example  .gitignore  .npmignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  GOLANGCI_LINT_DIRECTORY_IMPLEMENTATION_PLAN.md  LICENSE  PLAN.md  README.md  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  setup.ts  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
.claude/: settings.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  init-firewall.sh
.devcontainer/scripts/: init-firewall.sh  setup-dev-environment.sh
.github/workflows/: ci.yml  security.yml
docs/: CONFIGURATION.md  ai-model.md  claude-binary.md  configuration.md  custom-instructions.md  enforcement.md  ignore-patterns.md  linting.md  quick-commands.md  session-clearing.md
docs/adr/: 001-claude-session-subdirectory.md  002-secure-claude-binary-path.md  003-remove-configurable-data-directory.md  004-monorepo-architecture.md  005-claude-project-dir-support.md  007-golangci-lint-path-support.md  ADR-006-phpunit-separate-repository.md
hooks/: content-logger.js  mew-detector.js  timestamp-logger.js
reporters/go/: README.md  go.mod  go.sum
reporters/jest/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
reporters/jest/src/: JestReporter.test-data.ts  JestReporter.test.ts  JestReporter.ts  index.ts  types.ts
reporters/jest/test/: JestReporter.e2e.test.ts
reporters/phpunit/: .gitignore  .php-cs-fixer.php  README.md  SYNC_README.md  composer.json  phpunit.xml.dist  psalm.xml
reporters/phpunit/src/: PathValidator.php  Storage.php  TddGuardExtension.php  TddGuardListener.php  TddGuardSubscriber.php  TestResultCollector.php
reporters/phpunit/tests/: PathValidatorTest.php  TddGuardExtensionFailedTest.php  TddGuardExtensionTest.php  TddGuardStorageLocationTest.php
reporters/pytest/: README.md  pyproject.toml  pytest.ini.example
reporters/pytest/tdd_guard_pytest/: __init__.py  pytest_reporter.py
reporters/pytest/tests/: __init__.py  conftest.py  helpers.py  test_config_option.py  test_path_validation.py  test_plugin_config.py  test_project_root.py  test_pytest_configure.py  test_pytest_reporter.py
reporters/rust/: Cargo.toml  Makefile.example  README.md  license.txt  package.json  rust-build-simplified.sh
reporters/rust/src/: error_parser.rs  main.rs  parser.rs  transformer.rs
reporters/test/: reporters.integration.test.ts  types.ts
reporters/test/factories/: go.ts  helpers.ts  index.ts  jest.ts  phpunit.ts  pytest.ts  rust.ts  vitest.ts
reporters/vitest/: .npmignore  README.md  package.json  tsconfig.json
reporters/vitest/src/: VitestReporter.test-data.ts  VitestReporter.test.ts  VitestReporter.ts  index.ts  types.ts
src/: ClaudeModelClient.test.ts  ClaudeModelClient.ts  HookEvents.test.ts  HookEvents.ts  __init__.py  index.ts  system-prompt.ts  tddValidator.test.ts  tddValidator.ts
src/cli/: buildContext.test.ts  buildContext.ts  hook-logger.test.ts  hook-logger.ts  processHookData.test.ts  processHookData.ts  tdd-guard.integration.test.ts  tdd-guard.test.ts  tdd-guard.ts  test-logger.test.ts  test-logger.ts
src/config/: Config.test.ts  Config.ts
src/contracts/schemas/: guardSchemas.test.ts  guardSchemas.ts  hookData.ts  lintSchemas.test.ts  lintSchemas.ts  pytestSchemas.ts  toolSchemas.test.ts  toolSchemas.ts  vitestSchemas.test.ts  vitestSchemas.ts
src/contracts/types/: ClientType.ts  ConfigOptions.ts  Context.ts  ModelClient.ts  ValidationResult.ts
src/guard/: GuardManager.test.ts  GuardManager.ts
src/hooks/: HookEvents.test.ts  HookEvents.ts  eslintRunner.test.ts  eslintRunner.ts  fileTypeDetection.ts  postToolLint.test.ts  postToolLint.ts  processHookData.test.ts  processHookData.ts  sessionHandler.test.ts  sessionHandler.ts  userPromptHandler.test.ts  userPromptHandler.ts
src/linters/: Linter.ts
src/linters/eslint/: ESLint.test.ts  ESLint.ts
src/linters/golangci/: GolangciLint.test.ts  GolangciLint.ts
src/processors/: index.ts  lintProcessor.ts
src/processors/testResults/: TestResultsProcessor.test.ts  TestResultsProcessor.ts
src/providers/: LinterProvider.test.ts  LinterProvider.ts  ModelClientProvider.test.ts  ModelClientProvider.ts
src/reporters/: FileReporter.test.ts  FileReporter.ts  JSONReporter.test.ts  JSONReporter.ts  PytestReporter.py  VitestReporter.test.ts  VitestReporter.ts  __init__.py
src/schemas/: hookData.ts
src/storage/: FileStorage.test.ts  FileStorage.ts  MemoryStorage.ts  Storage.test.ts  Storage.ts
src/test/: index.ts
src/test/factories/: configFactory.ts  contextFactory.ts  editFactory.ts  helpers.test.ts  helpers.ts  hookDataFactory.test.ts  hookDataFactory.ts  multiEditFactory.ts  operations.ts  testDefaults.ts  todoFactory.ts  writeFactory.ts
src/types/: Context.ts  ModelClient.ts  TDDValidation.ts
src/validation/: system-prompt.ts  tddValidator.integration.test.ts  tddValidator.test.ts  tddValidator.ts  validator.integration.test.ts  validator.test.ts  validator.ts
src/validation/context/: context.test.ts  context.ts
src/validation/models/: AnthropicApi.test.ts  AnthropicApi.ts  AnthropicModelClient.test.ts  AnthropicModelClient.ts  ClaudeCli.test.ts  ClaudeCli.ts  ClaudeCodeSdk.test.ts  ClaudeCodeSdk.ts  ClaudeModelClient.test.ts  ClaudeModelClient.ts
src/validation/prompts/: answering-instructions.ts  edit-analysis.ts  edit-instructions.ts  file-type-rules.ts  file-types.ts  multi-edit-analysis.ts  multiEdit-instructions.ts  operation-analysis.ts  prompts.ts  response-format.ts  response.ts  role-and-context.ts  role-prompt.ts  role.ts  rules.ts  (+5 more)
test/: debug-trigger.test.ts
test/artifacts/: .golangci.yml  eslint.config.js  file-with-issues.go
test/bugs/: stale-test-age-threshold.test.ts
test/hooks/: fileTypeDetection.test.ts  processHookData.fileType.test.ts  processHookData.python.test.ts
test/integration/: test-context.test.ts  validator.core.test.ts  validator.scenarios.test.ts
test/utils/: assertions.ts  index.ts
(+91 files in other folders)
