[project]
name = "tdd-guard"
version = "0.3.1"
description = "TDD Guard enforces Test-Driven Development principles using Claude Code hooks"
authors = [{name = "Nizar Selander"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pytest>=6.0",
]

[project.entry-points."pytest11"]
tdd-guard = "src.reporters.PytestReporter"

[tool.setuptools.packages.find]
include = ["src*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"