[project]
name = "tdd-guard"
version = "0.5.0"
description = "Enforces Test-Driven Development principles in Claude Code through automated validation"
authors = [{name = "Nizar Selander"}]
license = "MIT"
readme = "README.md"
keywords = ["tdd", "test-driven-development", "claude", "testing", "pytest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.8"
dependencies = [
    "pytest>=6.0",
]

[project.urls]
"Homepage" = "https://github.com/nizos/tdd-guard"
"Repository" = "https://github.com/nizos/tdd-guard"
"Bug Tracker" = "https://github.com/nizos/tdd-guard/issues"

[project.entry-points."pytest11"]
tdd-guard = "src.reporters.PytestReporter"

[tool.setuptools.packages.find]
include = ["src*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"