[project]
name = "tdd-guard"
version = "0.5.3"
description = "Enforces Test-Driven Development principles in Claude Code through automated validation"
authors = [{name = "Nizar Selander"}]
license = "MIT"
readme = "README.md"
keywords = ["tdd", "test-driven-development", "claude", "testing", "pytest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.8"
dependencies = [
    "pytest>=6.0",
]

[project.urls]
"Homepage" = "https://github.com/nizos/tdd-guard"
"Repository" = "https://github.com/nizos/tdd-guard"
"Bug Tracker" = "https://github.com/nizos/tdd-guard/issues"

[project.entry-points."pytest11"]
tdd-guard = "tdd_guard_pytest.reporters.PytestReporter"

[tool.setuptools]
package-dir = {"tdd_guard_pytest" = "src"}
packages = ["tdd_guard_pytest", "tdd_guard_pytest.reporters"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"