[package]
name = "tdd-guard-rust"
version = "0.1.0"
edition = "2021"
authors = ["TDD Guard Contributors"]
description = "Rust test reporter for TDD Guard validation"
license = "MIT"
repository = "https://github.com/nizos/tdd-guard"

[[bin]]
name = "tdd-guard-rust"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.5"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
