[package]
name = "tdd-guard-rust"
version = "0.1.0"
edition = "2021"
authors = ["SvO <104hp6u@gmail.com>"]
description = "Rust test reporter for TDD Guard validation"
license = "MIT"
repository = "https://github.com/nizos/tdd-guard"
homepage = "https://github.com/nizos/tdd-guard"
documentation = "https://github.com/nizos/tdd-guard/tree/main/reporters/rust"
readme = "README.md"
keywords = ["testing", "tdd", "tdd-guard", "reporter", "cargo-test"]
categories = ["development-tools::testing", "command-line-utilities"]

[[bin]]
name = "tdd-guard-rust"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.5"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
